# Strenda-biocatalysis

./: 404.html  Readme.md  _config.yml  _toc.yml  conf.py  gen.toml  index.html  index.rst  intro.md  mkdocs.yml  reactants.rst
.github/workflows/: gen.yml
ModelExamples/Biocatalyst/: Readme.md
ModelExamples/Components/: Readme.md
ModelExamples/Operation Mode/: Readme.md
ModelExamples/OperationMode/: Readme.md
ModelExamples/Operation_Mode/: Readme.md
ModelExamples/Processes/: Readme.md
ModelExamples/Reactants/: Readme.md
ModelExamples/Reaction_conditions/: Readme.md
ModelExamples/Results/: Readme.md
ModelExamples/Sampling/: Readme.md
ModelExamples/Vessels/: Readme.md
ModelExamples/Vessels and Volumes/: Reamdme.md
ModelExamples/Vessels_and_Mixing/: Readme.md
_build/.doctrees/: README.doctree  (+5 more)
builddir/: .buildinfo  README.html  biocatalyst.html  experiment_type.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  reactants.html  reaction_conditions.html  search.html  searchindex.js  strenda.html  vessels.html
docs/: index.md
guidelines/: index.html
models/: experiment_type.py  vessels.py
python/: pyproject.toml
python/strendabiocat/: biocatalyst.py  components.py  operation_mode.py  reaction_conditions.py  results.py  sampling.py  vessels_and_mixing.py
schemas/: reaction-conditions.md  sampling.md  what_and_why.md
sdRDM/: example.py
search/: search_index.json
specifications/: biocatalyst.md  components.md  operation_mode.md  reaction_conditions.md  results.md  sampling.md  vessels_and_mixing.md
(+142 files in other folders)
