[tool.poetry]
name = "strendabiocat"
version = "0.1.0"
description = "Python library that handles STRENDA Biocatalysis types"
authors = ["Jan Range <range.jan@web.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.6.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
